# Blaze

./: .gitignore  README.md  gggx_lifecycle_fixed  gggx_lifecycle_fixed2  gggx_lifecycle_nocomment  simple_gggx_test3  syntax_comparison.blaze  test_break_continue.blaze  test_break_simple.blaze  test_incase_basic.blaze  test_incase_complex.blaze  test_incase_simple.blaze  test_switch.blaze  test_switch_both.blaze
blaze/: -o  .gitignore  BUGFIXES.md  CLAUDE.md  CMakeLists.txt  COMPLETE_BLAZE_SYNTAX_REFERENCE.md  CONTRIBUTING.md  FINAL_STATUS.md  FIX_FLOAT_VAR_BUG.md  FIX_PLAN.md  FIX_PLAN_REPORT.md  FUNCTION_CALL_PROGRESS.md  FUNCTION_FIX_STATUS.md  ISSUES_FOUND.md  LICENSE  MANUAL_RELEASE_STEPS.md  MEMORY_INTEGRATION.md  Makefile  OPTIMIZATION_DEBUG_SUMMARY.md  QUICK_FIXES_REFERENCE.md  README.md  README_SOLID_NUMBERS.md  RELEASE_NOTES.md  SOLID_NUMBERS_IMPLEMENTATION_PLAN.md  SWARM_RESTORATION_LOG.md  SWARM_UPDATE.md  check_token  check_token.c  check_token_1  check_token_1.c  compilation_output.txt  debug_final.txt  debug_full.txt  debug_full2.txt  debug_full3.txt  debug_full4.txt  debug_if  debug_if.blaze  debug_output.txt  demo_current.blaze  (+72 more)
blaze/.github/: pull_request_template.md
blaze/cmake/: cmake_uninstall.cmake.in
blaze/docs/: CORRECTION_NOTICE.md  FLOW_OPERATORS_REAL.md  GGGX_FRAMEWORK.md  GGGX_IMPLEMENTATION_ROADMAP.md  INSTRUCTIONS.md  PUNCTUATION_DEEP_DIVE.md  SOLID_NUMBERS_CODEGEN.md  SOLID_NUMBERS_COMPLETE.md  SOLID_NUMBERS_EXAMPLES.md  SOLID_NUMBERS_GGGX_INTEGRATION.md  SOLID_NUMBERS_IMPLEMENTATION.md  SOLID_NUMBERS_IMPLEMENTATION_PLAN.md  SOLID_NUMBERS_QUICK_START.md  SOLID_NUMBERS_SYNTAX_SPEC.md  SOLID_NUMBER_CALCULATION_ROADMAP.md  SOLID_SYNTAX_DESIGN.md  TIME_TRAVEL_SPEC.md  WATER_METAPHOR_COMPLETE.md  WHY_BLAZE_SYNTAX.md  WINDOWS_BUILD.md  declare_block_ast_structure.md  optimization-investigation.md  parser_security_analysis.md  typed_var_parser_fix.md  union_overlap_analysis.md  variable_syntax_design.md
blaze/examples/: 03_punctuation_syntax.blaze  05_gggx_prediction.blaze  06_direct_machine_code.blaze  07_flow_visualization.blaze  08_real_flow_operators.blaze  09_gggx_fine_grained.blaze  10_advanced_arithmetic.blaze  11_simple_arithmetic_test.blaze  12_basic_test.blaze  15_basic_test.blaze  17_basic_arithmetic_test.blaze  18_single_math_test.blaze  19_debug_test.blaze  20_simple_print_test.blaze  21_txt_test.blaze  22_gggx_trace_lifecycle.blaze  23_simple_gggx_test.blaze  README.md  demo_solid_long_format.blaze
blaze/include/: array4d_types.h  ast_node.h  blaze_internals.h  blaze_stdlib.h  blaze_types.h  codegen_wrapper.h  gggx.h  gggx_integration.h  gggx_universal.h  scalable_codegen.h  solid_runtime.h  symbol_table_types.h
blaze/scripts/: build_release.sh  create_github_release.sh
blaze/src/: blaze_compiler_main.bak  blaze_compiler_main.c  blaze_compiler_main_chunked.c  blaze_compiler_main_clean.c  blaze_compiler_main_nostdlib.c  blaze_compiler_main_sentry.c  blaze_compiler_main_test.c  blaze_with_sentry.c  gggx.c  gggx_integration.c  sentry_http.c  sentry_integration.c  sentry_integration.h  simple_sentry.c  simple_sentry.h
blaze/tests/: README.md  debug_lexer.c  debug_parser.c  debug_solid.c  run_solid_tests.sh  simple_lexer_test.c  (+6 more)
(+109 files in other folders)
